--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=ec2-23-21-219-105.compute-1.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=d4i12c8v8kp710
